# harness-donk

./: .gitignore  CLAUDE.md  README.md  TODO.md  install.sh  orchestrator.sh  pyproject.toml
adapters/: claude.sh  codex.sh
coordinator/: coordinator.md
coordinator/tools/: harness-task
docs/: README.md  adapter-contract.md  adapter-contract.zh.md  data-schemas.md  data-schemas.zh.md  design.md  design.zh.md  development-plan.md  development-plan.zh.md  getting-started.md  getting-started.zh.md  git-workflow.md  git-workflow.zh.md  interfaces.md  interfaces.zh.md  module-architecture.md  module-architecture.zh.md
hooks/: notification.sh  pre_tool_use.sh  stop.md
i18n/: en.json  zh.json
lib/: atomic_write.sh  budget.sh  gate.sh  notify.sh  python_env.sh
schema/: harness.sql  model-prices.json
schema/json/: review-response.schema.json
schema/migrations/: README.md  V2__add_task_blocked_event_type.sql  V3__drop_cost_tracking.sql
src/harness/: __init__.py  adapter.py  atomic_write.py  budget.py  config.py  db.py  i18n.py  merge.py  notify.py  orchestrator.py  usage.py  watchdog.py  worker.py
templates/: AGENTS.md.tmpl  decisions.md.tmpl  error-journal.md.tmpl  gitignore-fragment  settings.json.tmpl
templates/en/: AGENTS.md.tmpl  decisions.md.tmpl  error-journal.md.tmpl
tests/: run.sh
tests/integration/: test_e2e_backend_switch.sh  test_e2e_blocked_resume.sh  test_e2e_depends_on.sh  test_e2e_kill_recovery.sh  test_e2e_orphan_reaper.sh  test_e2e_parallel.sh  test_e2e_retry_failed.sh  test_e2e_success.sh  test_harness_infi.sh  test_init_idempotent.sh
(+37 files in other folders)
