[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.1.0"
description = "Multi-agent self-driving coding harness — Python parts (DB layer, coordinator tools)"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
harness-task         = "harness.cli.harness_task:main"
harness-db           = "harness.cli.db_cli:main"
harness-orchestrator = "harness.cli.orchestrator_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
