[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-donk"
version = "0.1.0"
description = "harness-donk — Multi-agent self-driving coding harness. Python module is still `harness` (package distribution name differs to avoid PyPI collision)."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
harness-task         = "harness.cli.harness_task:main"
harness-db           = "harness.cli.db_cli:main"
harness-orchestrator = "harness.cli.orchestrator_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
